[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/YouMurderer.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Scripts/Main Menu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Title.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sound/Effects/drip5.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sound/Effects/drip2.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sound/Music/KGG Track.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Scripts/MapSelect.gd" type="Script" id=7]

[node name="Main Menu" type="MarginContainer"]
margin_left = 120.0
margin_top = 80.0
margin_right = 120.0
margin_bottom = 80.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v1" type="VBoxContainer" parent="."]
margin_right = 796.0
margin_bottom = 274.0

[node name="TextureRect" type="TextureRect" parent="v1"]
modulate = Color( 1, 0, 0, 1 )
margin_right = 796.0
margin_bottom = 66.0
texture = ExtResource( 3 )

[node name="h1" type="HBoxContainer" parent="v1"]
margin_top = 70.0
margin_right = 796.0
margin_bottom = 274.0

[node name="scr_Main" type="VBoxContainer" parent="v1/h1"]
margin_right = 197.0
margin_bottom = 204.0

[node name="btn_Singleplayer" type="Button" parent="v1/h1/scr_Main"]
margin_right = 197.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.454902, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 1, 1 )
text = "Singleplayer"
flat = true
align = 0

[node name="btn_Multiplayer" type="Button" parent="v1/h1/scr_Main"]
margin_top = 52.0
margin_right = 197.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.454902, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 1, 1 )
text = "Multiplayer"
flat = true
align = 0

[node name="v1" type="VBoxContainer" parent="v1/h1/scr_Main"]
visible = false
margin_top = 104.0
margin_right = 197.0
margin_bottom = 256.0

[node name="h1" type="HBoxContainer" parent="v1/h1/scr_Main/v1"]
margin_right = 197.0
margin_bottom = 152.0

[node name="Label" type="Label" parent="v1/h1/scr_Main/v1/h1"]
margin_top = 69.0
margin_right = 40.0
margin_bottom = 83.0
text = "          "

[node name="v1" type="VBoxContainer" parent="v1/h1/scr_Main/v1/h1"]
margin_left = 44.0
margin_right = 153.0
margin_bottom = 152.0

[node name="btn_Join" type="Button" parent="v1/h1/scr_Main/v1/h1/v1"]
margin_right = 109.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.454902, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 1, 1 )
text = "Join"
flat = true
align = 0

[node name="btn_Create" type="Button" parent="v1/h1/scr_Main/v1/h1/v1"]
margin_top = 52.0
margin_right = 109.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.454902, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 1, 1 )
text = "Create"
flat = true
align = 0

[node name="btn_MultiplayerBack" type="Button" parent="v1/h1/scr_Main/v1/h1/v1"]
margin_top = 104.0
margin_right = 109.0
margin_bottom = 152.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.454902, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 1, 1 )
text = "back"
flat = true
align = 0

[node name="btn_Options" type="Button" parent="v1/h1/scr_Main"]
margin_top = 104.0
margin_right = 197.0
margin_bottom = 152.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.454902, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 1, 1 )
text = "Options"
flat = true
align = 0

[node name="btn_Exit" type="Button" parent="v1/h1/scr_Main"]
margin_top = 156.0
margin_right = 197.0
margin_bottom = 204.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.454902, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 1, 1 )
text = "Exit"
flat = true
align = 0

[node name="scr_Select" type="VBoxContainer" parent="v1/h1"]
visible = false
margin_right = 431.0
margin_bottom = 316.0

[node name="h1" type="HBoxContainer" parent="v1/h1/scr_Select"]
margin_right = 431.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="v1/h1/scr_Select/h1"]
margin_top = 3.0
margin_right = 71.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 1 )
text = "Map: "

[node name="btn_MapSelect" type="MenuButton" parent="v1/h1/scr_Select/h1"]
margin_left = 75.0
margin_right = 153.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.45, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 1, 1 )
text = "Test"
align = 0
items = [ "Test", null, 0, false, false, 0, 0, null, "", false, "Test2", null, 0, false, false, 1, 0, null, "", false ]
script = ExtResource( 7 )

[node name="h2" type="HBoxContainer" parent="v1/h1/scr_Select"]
margin_top = 52.0
margin_right = 431.0
margin_bottom = 104.0

[node name="Label" type="Label" parent="v1/h1/scr_Select/h2"]
margin_top = 5.0
margin_right = 57.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 1 )
text = "IP: "

[node name="line_IP" type="LineEdit" parent="v1/h1/scr_Select/h2"]
margin_left = 61.0
margin_right = 227.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )

[node name="h3" type="HBoxContainer" parent="v1/h1/scr_Select"]
margin_top = 108.0
margin_right = 431.0
margin_bottom = 160.0

[node name="Label" type="Label" parent="v1/h1/scr_Select/h3"]
margin_top = 5.0
margin_right = 199.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 1 )
text = "Player name: "

[node name="line_PlayerName" type="LineEdit" parent="v1/h1/scr_Select/h3"]
margin_left = 203.0
margin_right = 369.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )

[node name="h4" type="HBoxContainer" parent="v1/h1/scr_Select"]
margin_top = 164.0
margin_right = 431.0
margin_bottom = 212.0

[node name="lbl_PlayerColor" type="Label" parent="v1/h1/scr_Select/h4"]
margin_top = 3.0
margin_right = 218.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 1 )
text = "Player Color: "

[node name="PlayerColor" type="ColorPickerButton" parent="v1/h1/scr_Select/h4"]
margin_left = 222.0
margin_right = 431.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.45, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 1, 1 )
text = "Player Color"
flat = true
color = Color( 1, 1, 1, 1 )
edit_alpha = false

[node name="btn_Play" type="Button" parent="v1/h1/scr_Select"]
margin_top = 216.0
margin_right = 431.0
margin_bottom = 264.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.45, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 1, 1 )
text = "Play"
flat = true
align = 0

[node name="btn_Back" type="Button" parent="v1/h1/scr_Select"]
margin_top = 268.0
margin_right = 431.0
margin_bottom = 316.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.45, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 1, 1 )
text = "Back"
flat = true
align = 0

[node name="aud_MenuHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="aud_MenuClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="mouse_entered" from="v1/h1/scr_Main/btn_Singleplayer" to="v1/h1/scr_Main/btn_Singleplayer" method="_on_btn_Singleplayer_mouse_entered"]
